# TRTK

./: .gitignore  CMakeLists-mediTEC.txt  CMakeLists.txt  Git Commands.txt  README.md  Roadmap.txt  create_msvc10_project.bat  create_msvc10_win64_project.bat  create_msvc12_project.bat  create_msvc12_win64_project.bat  history.txt  index.html  license.txt  win32_msvc10_build.bat  win32_msvc12_build.bat  win32_vs120_build.bat  win64_msvc12_build.bat
cmake/: Doxyfile.in  TRTKConfig.cmake.in  Version.hpp.in  configure.cmake.in
cmake/template/src/: main.cpp
doc/: ReadMe.txt
examples/: CMakeLists.txt  pinhole_camera_model_1.cpp  pinhole_camera_model_2.cpp  pivot_calibration_1.cpp  pivot_calibration_2.cpp  pivot_calibration_ransac.cpp
html/: _circle_8cpp.html  _circle_8cpp__incl.map  _circle_8cpp__incl.md5  _circle_8cpp_source.html  _circle_8hpp.html  _circle_8hpp__dep__incl.map  _circle_8hpp__dep__incl.md5  _circle_8hpp_source.html  _client_server_8cpp_source.html  _client_server_8hpp.html  _client_server_8hpp__dep__incl.map  _client_server_8hpp__dep__incl.md5  _client_server_8hpp__incl.md5  _client_server_8hpp_source.html  _clock_8cpp.html  _clock_8cpp__incl.map  _clock_8cpp__incl.md5  _clock_8cpp_source.html  _clock_8hpp.html  _clock_8hpp__dep__incl.map  _clock_8hpp__dep__incl.md5  _clock_8hpp__incl.md5  _clock_8hpp_source.html  _coding_style.html  _coordinate_8cpp.html  _coordinate_8cpp__incl.map  _coordinate_8cpp__incl.md5  _coordinate_8cpp_source.html  _coordinate_8hpp.html  _coordinate_8hpp__dep__incl.map  _coordinate_8hpp__dep__incl.md5  _coordinate_8hpp__incl.map  _coordinate_8hpp__incl.md5  _coordinate_8hpp_source.html  _copyright.html  _correlation_circle_8cpp.html  _correlation_circle_8cpp__incl.map  _correlation_circle_8cpp__incl.md5  _correlation_circle_8cpp_source.html  _correlation_circle_8hpp.html  (+648 more)
html/search/: all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_7a.html  all_7e.html  classes_63.html  classes_65.html  classes_66.html  classes_67.html  classes_69.html  classes_6d.html  classes_6e.html  classes_6f.html  classes_70.html  classes_72.html  classes_73.html  classes_74.html  defines_6d.html  defines_74.html  enums_61.html  enums_62.html  enums_63.html  (+76 more)
include/TRTK/: CImg.h  Circle.hpp  ClientServer.hpp  Clock.hpp  Coordinate.hpp  CorrelationCircle.hpp  CorrelationSphere.hpp  Definitions.hpp  Diffusion.hpp  ErrorObj.hpp  EstimateAffineTransformation2D.hpp  EstimateAffineTransformation3D.hpp  EstimateAffineTransformationFromPlaneTo3D.hpp  EstimateProjectiveTransformation2D.hpp  EstimateProjectiveTransformation3D.hpp  EstimateRigidTransformation2D.hpp  EstimateRigidTransformation3D.hpp  EstimateSimilarityTransformation2D.hpp  EstimateSimilarityTransformation3D.hpp  EstimateTransformation.hpp  EstimateTransformation2D.hpp  EstimateTransformation3D.hpp  Fit.hpp  Fit2D.hpp  Fit3D.hpp  FitCircle.hpp  FitCircle3D.hpp  FitCircleInOrigin.hpp  FitLine.hpp  FitLine3D.hpp  FitPlane.hpp  FitSphere.hpp  GenericPolynomial.hpp  Icp.hpp  Interpolation2D.hpp  Interpolation3D.hpp  Iterator.hpp  Line3D.hpp  Optimization.hpp  PinholeCameraModel.hpp  (+17 more)
misc/: Version.hpp.in  configure.cmake.in  git_commands.txt  install.bat.in
misc/template/: CMakeLists.txt
misc/template/src/: main.hpp
src/: Circle.cpp  ClientServer.cpp  Clock.cpp  Coordinate.cpp  CorrelationCircle.cpp  ErrorObj.cpp  Line3D.cpp  Plane.cpp  Signals.cpp  Timestamp.cpp  Tools.cpp
src/doc/: Doxyfile  ReadMe.txt  make_doc.ahk  make_doc.sh
src/doc/src/: CodingStyle.dox  Copyright.dox  Documentation.dox  HomogeneousCoordinates.dox  Installation.dox  Mainpage.dox  Namespaces.dox  Tutorial.dox  customdoxygen.css  footer.html
test/: CMakeLists.txt  ReadMe.txt  ToDo.txt  pinhole_camera_model_analysis.cpp  unit_test.cpp  unit_test.hpp  unit_test.pro  unit_test_Circle.cpp  unit_test_Clock.cpp  unit_test_Coordinate.cpp  unit_test_CorrelationCircle.cpp  unit_test_CorrelationSphere.cpp  unit_test_Diffusion.cpp  unit_test_ErrorObj.cpp  unit_test_EstimateAffineTransformation2D.cpp  unit_test_EstimateAffineTransformation3D.cpp  unit_test_EstimateAffineTransformationFromPlaneTo3D.cpp  unit_test_EstimateProjectiveTransformation2D.cpp  unit_test_EstimateProjectiveTransformation3D.cpp  unit_test_EstimateRigidTransformation2D.cpp  unit_test_EstimateRigidTransformation3D.cpp  unit_test_EstimateSimilarityTransformation2D.cpp  unit_test_EstimateSimilarityTransformation3D.cpp  unit_test_FitCircle.cpp  unit_test_FitCircle3D.cpp  unit_test_FitCircleInOrigin.cpp  unit_test_FitLine.cpp  unit_test_FitLine3D.cpp  unit_test_FitPlane.cpp  unit_test_FitSphere.cpp  unit_test_GenericPolynomial.cpp  unit_test_Icp.cpp  unit_test_Iterator.cpp  unit_test_Optimization.cpp  unit_test_PinholeCameraModel.cpp  unit_test_PivotCalibration.cpp  unit_test_Range.cpp  unit_test_RegionGrowing2D.cpp  unit_test_RegionGrowing3D.cpp  unit_test_Signals.cpp  (+6 more)
test/Make/: Makefile  unit_test.cpp
test/misc/: unit_tests.vcxproj.user.in
test/res/: ICP_hip_data_points.txt  ICP_hip_pre-registration_data_points.txt  ICP_hip_pre-registration_model_points.txt  existing_file
